# afm

./: .gitignore  nco.py  top.py
app/: Cargo.toml
app/src/: nco.rs
fpga/: blinky.py  ice40_pll.py  picorv32.py  plot_vcd.py  sigma_delta_dac.py  top.py  top.v  top_tb.v  uart.py
fpga/app/: memory.x
fpga/app/.cargo/: config.toml
fpga/app/src/: led.rs  main.rs
