[package]
name = "app"
version = "0.1.0"
authors = ["Lachlan Sneff <lachlan@charted.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picorv32-rt = "0.5.3"
panic-halt = "0.2.0"

bitflags = "1.2"
libm = "0.2.1"
